      drawRayleigh(), and drawHalfOpen53()

      2) Added the following functions: drawExponential(), drawGeometric(), drawUniformCont(),
      drawUniformDisc(), drawGauss(), drawBernoulli(), drawBinomial(), drawPoisson(),
      drawGamma() and drawErlang()

      3) Moved inline functions to new Rng.inl file

   support.cpp
      -- lcStrcat() modified to return false if a non-terminated string is passed
      in the destination buffer; destination buffer is not modified (bug fix)

--------------------------------------------------------------------------------
basicGL

   AnalogGauge class
      -- updated drawing code

   Graphic class
      1) processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

      2) Only provides the 'lc' functions for LCreal defined as double

      3) Added line stipple feature

   SymbolLoader
      -- various functions -- call Component::processComponents() instead of
      BaseClass::processComponents()

--------------------------------------------------------------------------------
dis


--------------------------------------------------------------------------------
simulation

   Navigation class
      -- Fixed bug in calculating navigation UTC time

   Player class
      1) processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

      2) initData() -- Player name defaults to nul string (e.g., "")

   Route class
      1) Fixed bug in insertSteerpoint concerning position datatype

      2) various functions -- call Component::processComponents() instead of
      BaseClass::processComponents()

   Simulation class
      -- Added commas to last items in slot table (bug fix)

   Steerpoint class
      -- processComponents() -- calls Component::processComponents() instead of
      BaseClass::processComponents()

   Tdb class
      -- computeBoresightData() -- to decrease stack usage, the local arrays (xa,